fix maven-rat-plugin configuration

--- a/pom.xml
+++ b/pom.xml
@@ -270,6 +270,14 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <excludes>
+                        <exclude>.git/**/*</exclude>
+                        <exclude>.idea/**/*</exclude>
+                        <exclude>.gitignore</exclude>
+                        <exclude>**/*.md</exclude>
+                    </excludes>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
